--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
 <html>
-<iframe src="https://www.jigsawplanet.com/?rc=play&amp;pid=3a3ab8273e82&amp;view=iframe&amp;bgcolor=0x0a0a0a" style="width:100%;height:600px" frameborder="0" allowfullscreen></iframe>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gimik Perasmian</title>
+  <head></head>
+  <body><iframe src="https://www.jigsawplanet.com/?rc=play&amp;pid=3a3ab8273e82&amp;view=iframe&amp;bgcolor=0x0a0a0a" style="width:100%;height:600px" frameborder="0" allowfullscreen></iframe>
+  </body>
 </html>
